--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
       <meta name="keywords" content="" />
       <meta name="description" content="" />
       <meta name="author" content="" />
-      <link rel="shortcut icon" href="images/AFinal.png" type="">
+      <link rel="shortcut icon" href="images/New Folder/logo.ico" type="">
       <title>About Us</title>
       <!-- bootstrap core css -->
       <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -58,9 +58,9 @@
                            <a class="nav-link" href="blog_list.html">Blog</a>
                         </li> -->
                         <li class="nav-item">
-                           <a class="nav-link" href="contact.html">Contact</a>
+                           <a class="nav-link" href="SignUp.html">Sign Up</a>
                         </li>
-                        <li class="nav-item">
+<!--                         <li class="nav-item">
                            <a class="nav-link" href="cart.html">
                               <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 456.029 456.029" style="enable-background:new 0 0 456.029 456.029;" xml:space="preserve">
                                  <g>
@@ -115,7 +115,7 @@
                                  </g>
                               </svg>
                            </a>
-                        </li>
+                        </li> -->
                         <!-- <form class="form-inline">
                            <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
                            <i class="fa fa-search" aria-hidden="true"></i>
