--- a/SignUP.html
+++ b/SignUP.html
@@ -337,14 +337,14 @@
                                   <div class="col-md-12">
                                       <form method="post" autocomplete="off" name="google-sheet">
                                         <!-- <h1 id="head">Basic Information :</h1>   -->
-                                        <div class="form-group"> <label for="First Name">Enter Your First Name :</label>
-                                              <input type="text" name="First Name" class="form-control" placeholder="Enter Your First Name " value="" required=""/>
+                                        <div class="form-group"> <label for="First">Enter Your First Name :</label>
+                                              <input type="text" name="First" class="form-control" placeholder="Enter Your First Name " value="" required=""/>
                                           </div>
-                                          <div class="form-group"> <label for="Middle Name">Enter Your Middle Name :</label>
-                                             <input type="text" name="Middle Name" class="form-control" placeholder="Enter Your Middle Name " value="" required=""/>
+                                          <div class="form-group"> <label for="Middle">Enter Your Middle Name :</label>
+                                             <input type="text" name="Middle" class="form-control" placeholder="Enter Your Middle Name " value="" required=""/>
                                          </div>
-                                         <div class="form-group"> <label for="Last Name">Enter Your Last Name : </label>
-                                          <input type="text" name="Last Name" class="form-control" placeholder="Enter Your Last Name " value="" required=""/>
+                                         <div class="form-group"> <label for="Last">Enter Your Last Name : </label>
+                                          <input type="text" name="Last" class="form-control" placeholder="Enter Your Last Name " value="" required=""/>
                                       </div>
                                           <div class="form-group"> <label for="Email">Enter Your Email :</label>
                                               <input type="text" name="Email" class="form-control" placeholder="Enter Your Email " value="" required=""/>
