--- a/SignUP.html
+++ b/SignUP.html
@@ -352,8 +352,8 @@
                                           <div class="form-group"> <label for="DOB">Enter Your Date of Birth :</label>
                                              <input type="text" name="DOB" class="form-control" placeholder="Enter Your Date of Birth " value="" required=""/>
                                          </div>
-                                         <div class="form-group"> <label for="Marital Status">Enter Your Marital Status :</label>
-                                          <input type="text" name="Marital Status" class="form-control" placeholder="Enter Your Marital Status " value="" required=""/>
+                                         <div class="form-group"> <label for="Marital">Enter Your Marital Status :</label>
+                                          <input type="text" name="Marital" class="form-control" placeholder="Enter Your Marital Status " value="" required=""/>
                                       </div>
                                       <div class="form-group"> <label for="postcode">Enter Your Home Post Code :</label>
                                        <input type="text" name="postcode" class="form-control" placeholder="Enter Your home post code " value="" required=""/>
@@ -367,8 +367,8 @@
                                 <div class="form-group"> <label for="longliving">How long you have been living there : <br></label>
                                  <input type="text" name="longliving" class="form-control" placeholder="Enter Years " value="" required=""/>
                              </div>
-                             <div class="form-group"> <label for="own/rented">Are you own the property or rented :</label>
-                              <input type="text" name="own/rented" class="form-control" placeholder="Type Owner Or Rented " value="" required=""/>
+                             <div class="form-group"> <label for="own_rented">Are you own the property or rented :</label>
+                              <input type="text" name="own_rented" class="form-control" placeholder="Type Owner Or Rented " value="" required=""/>
                           </div>
                           <!-- <h1 id="head">Confidential details : </h1> <br> -->
                           <div class="form-group"> <label for="bank">Enter Bank Name :</label>
